@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<addon id="plugin.video.L0RE.tlc" name="TLC Mediathek" version="1.0.1" provider-name="L0RE">
+<addon id="plugin.video.L0RE.tlc" name="TLC Mediathek" version="1.0.2" provider-name="L0RE">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0"/>
 	</requires>
@@ -24,14 +24,8 @@
 			<icon>icon.png</icon>
 			<fanart>fanart.jpg</fanart>
 		</assets>
-		<news>[B][COLOR orangered]Version 1.0.1  (14.07.2019)[/COLOR][/B] by realvito[CR]
-- fixed: Vereinzelt werden KEINE Episoden angezeigt, obwohl Sie vorhanden sind (z.B. Specials)
-- added: Rubrik = Alle Sendungen, Themen
-- added: Nächste Seite zum weiterblättern in Rubriken
-- added: Videos mit -inputstream.adaptive- abspielen (settings)
-- added: Neueste Episoden im Ordner oben anzeigen oder weitere Sortiermethoden (settings)
-- added: Eigene TLC-Favoriten anlegen (RechtsKlick-Menü)
-- added: Sprachfiles (.po)
+		<news>[B][COLOR orangered]Version 1.0.2  (17.08.2019)[/COLOR][/B] by realvito[CR]
+- fixed: Rubrik = Themen - Ordner ist leer
 		</news>
 	</extension>
 </addon>
