@@ -10,3 +10,6 @@
 - added: Neueste Episoden im Ordner oben anzeigen oder weitere Sortiermethoden (settings)
 - added: Eigene TLC-Favoriten anlegen (RechtsKlick-Menü)
 - added: Sprachfiles (.po)
+
+[B]Version 1.0.2  (17.08.2019)[/B] by realvito[CR]
+- fixed: Rubrik = Themen - Ordner ist leer
